fixed issue where scrollbar on browser would cause header and page content to move left, causing 'jumping' of elements between pages. Scrollbars are hidden but functional, completed styling and added placeholder text to home

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,15 @@
 .btn-dark.btn-txt {
   color: #FFFFFF8C !important;
 }
+
+/* from https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
+ /* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
